# genetic-bot

./: .gitignore  CMakeLists.txt  README.md  main.c
Board/: Board.c  Board.h  Obstacle.c  Obstacle.h
Constante/: Constante.h
Genetic/: DnaNeuralNetwork.c  DnaNeuralNetwork.h  GeneDouble.c  GeneDouble.h  Individual.c  Individual.h  Population.c  Population.h
Neural/: NeuralActivation.c  NeuralActivation.h  NeuralLayer.c  NeuralLayer.h  NeuralNetwork.c  NeuralNetwork.h  Neuron.c  Neuron.h  NeuronalInput.c  NeuronalInput.h  TestNeural.c  TestNeural.h
Robot/: Robot.c  Robot.h  Sensor.c  Sensor.h
Tool/: Tool.c  Tool.h
Vector2D/: points.c  points.h
Workers/: Workers.c  Workers.h
